[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "qwen-memory"
version = "1.0.0"
description = "Persistent memory system for AI coding agents — SQLite + FTS5 + TF-IDF semantic search"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "scikit-learn>=1.0",
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
qwen-mem = "qwen_memory.mem:main"

[tool.setuptools.packages.find]
where = ["src"]
